--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
-                "phpunit/phpunit": "^9.5.10",
+        "pelmered/fake-car": "^2.0",
+        "phpunit/phpunit": "^9.5.10",
         "spatie/laravel-ignition": "^1.0"
     },
     "autoload": {
